# movie_recommendation_system

./: .gitignore  README.md  vercel.json
backend/: .env  package-lock.json  package.json  server.js
backend/config/: axios.js  sql_db.js  upstash.js
backend/controllers/: authController.js  moviesController.js  ratingsController.js
backend/middlewares/: auth.js  rateLimiter.js
backend/routes/: api.js
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.mjs
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AuthCallback.jsx  MovieCard.jsx  MoviesNotFound.jsx  Navbar.jsx  posterCard.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/lib/: axios.js
frontend/src/pages/: AuthPage.jsx  HomePage.jsx  MovieRecommendationPage.jsx  searchPage.jsx
frontend/vite-project/: package-lock.json
ml_service/: .dockerignore  Dockerfile  db.py  main.py  pyproject.toml
ml_service/artifacts/: movie_index.csv  movies.csv  tfidf_matrix.joblib  tfidf_vectorizer.joblib
ml_service/routers/: personalize.py  recommend.py
ml_service/train/: cf.py  content.py  preprocess.py
